[package]
name = "actix-web-helloworld"
version = "0.1.0"
authors = ["donglua <foolfalcon@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0.116", features = ["derive"] }
